# irp_integration

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  analysis.py  client.py  constants.py  edm.py  import_job.py  job.py  mri_import.py  portfolio.py  pyproject.toml  rdm.py  reference_data.py  risk_data_job.py  s3.py  treaty.py
.github/workflows/: ci.yml  publish-test.yml  publish.yml
docs/: api.md
irp_integration/: __init__.py  analysis.py  constants.py  databridge.py  exceptions.py  export_job.py  rdm.py
